--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,46 @@
-<h1>Make your form here</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>New Pirate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/" rel="stylesheet">
+</head>
+
+<body>
+  <form Method="POST" action="/pirates">
+    <h3>Make a Pirate:</h3>
+    <label for="pirate[name]">Name: </label><input type="text" name="pirate[name]"><br>
+    <label for="pirate[weight]">Weight: </label><input type="text" name="pirate[weight]"><br>
+    <label for="pirate[height]">Name: </label><input type="text" name="pirate[height]"><br>
+
+    <h3>Make a ship: </h3>
+    <label>Name: </label>
+    <input id="ship_name_1" type="text" name="pirate[ships][][name]" >
+    <br>
+    <label>Type: </label>
+    <input id="ship_type_1" type="text" name="pirate[ships][][type]" >
+    <br>
+    <label>Booty: </label>
+    <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" >
+    <br>
+
+    <h3>Make another ship: </h3>
+    <label>Name: </label>
+    <input id="ship_name_2" type="text" name="pirate[ships][][name]" >
+    <br>
+    <label>Type: </label>
+    <input id="ship_type_2" type="text" name="pirate[ships][][type]" >
+    <br>
+    <label>Booty: </label>
+    <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" >
+    <br><br>
+
+    <input type="submit" id="Submit">
+
+  </form>
+
+</body>
+
+</html>
