--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,14 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate</h1>
+
+<p><%=@pirate.name%></p><br>
+<p><%=@pirate.weight%>/<p><br>
+<p><%=@pirate.height%>/<p><br>
 
 
-<h2>Display your first ship here</h2>
+<h2>Ships<h2>
 
-
-<h2>Display your second ship here</h2>
+<%@ships.each do |ship| %>
+<p>><%=ship.name%></p><br>>
+<p>><%=ship.type%></p><br>>
+<p>><%=ship.booty%></p><br>>
+<%end%>
